packages/game/src/snapshots/game__state__tests__move_unit_2.snap
---
source: src/state.rs
expression: state.finalize()
---
FinalizedGameState {
    cells: [
        (
            Address {
                x: -1,
                y: 0,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 2,
                y: 0,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
    ],
}
