packages/game/src/snapshots/game__state__tests__move_unit_3.snap
---
source: src/state.rs
expression: error
---
{
    (
        2,
        RelativePath {
            x: 0,
            y: 0,
        },
    ),
}
